# trialflow-agro

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  manuscript.yml  publish-pypi.yml
examples/basic_trial_analysis/: README.md  config.yml  data.csv  report.html  run.sh
examples/basic_trial_analysis/output/: results.json
paper/: biblio.bib  paper.md
tests/: conftest.py  test_temp.py
trialflow_agro/: __init__.py  pipeline.py
trialflow_agro/cli/: main.py
trialflow_agro/config/: __init__.py  schema.py
trialflow_agro/data/: loaders.py  schema.py
trialflow_agro/inference/: diagnostics.py  fit.py
trialflow_agro/models/: hierarchical.py
trialflow_agro/reporting/: plots.py  report_builder.py  summarize.py
